--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
 	box-sizing: border-box;
 }
 
-nav ul li{
-	margin: 25px 0px 20px 0px;
+nav a{
+	text-transform: uppercase;
+	color: white;
 }
 
 .img-set {
@@ -14,3 +15,8 @@ nav ul li{
 	border-radius: 20%;
 }
 
+@media screen and (max-width: 600px) {
+  div.example {
+    display: none;
+  }
+}
